# etude_cas_rdm

./: .gitignore  pyproject.toml
etude_cas_rdm/: Profile1.csv  Profile2.csv  lift.csv  main.ipynb  profile.csv
